[tool.poetry]
name = "git-profile"
version = "1.0.0"
description = "Python package that helps you easily manage and switch between multiple git profiles."
authors = ["Adrian Pop <popadrian1996@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.7"
coveralls = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
flake8 = "^3.7"
mypy = "^0.720.0"
coveralls = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
