[tool.poetry]
name = "git-profiles"
version = "1.0.1"
description = "Python package that helps you easily manage and switch between multiple git profiles."
authors = ["Adrian Pop <popadrian1996@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/popadi/git-profiles"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.1"
pytest-cov = "^2.7"
mypy = "^0.720.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
